--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -48,12 +48,46 @@ body {
           color: $blue;
         }
         .field {
-          width: 20%;
+          width: 50%;
           margin: auto;
         }
         .buttons {
           margin: 25px;
         }
+    }
+    .login-part { 
+      display: flex;
+    }
+    .login-part-one { 
+      width: 50%;
+      border-right: #2c3e50 solid 1px;
+    }
+    .login-part-two { 
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      .ui.header.connect {
+        cursor: pointer;
+      }
+    }
+    .create-account {
+      align-self: center;
+      width: 50%;
+      height: 80%;
+
+      .ui.form.account-form {
+        width: 100%;
+
+        .field {
+          width: 100%;
+          margin-top: 20px;
+        }
+        .buttons {
+          margin: 15px;
+          display: flex;
+          justify-content: space-around;
+        }
+      }
     }
 }
 .navbar {
@@ -586,6 +620,25 @@ body {
         width: 60%;
       }
     }
+    .login-part { 
+      display: flex;
+      flex-direction: column;
+    }
+    .login-part-one { 
+      width: 100%;
+      border: none;
+    }
+    .login-part-two { 
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+    .create-account {
+      align-self: center;
+      width: 100%;
+      height: 80%;
+    }
+
   }
   .navbar {
 
